背景が「チェッカーボード」「黒」「白」の3種類から選択できるようにした。

--- a/ImageFilter Gallery/en.lproj/MainMenu.xib
+++ b/ImageFilter Gallery/en.lproj/MainMenu.xib
@@ -181,7 +181,7 @@
 						<object class="NSMenu" key="NSSubmenu" id="720053764">
 							<string key="NSTitle">File</string>
 							<array class="NSMutableArray" key="NSMenuItems">
-								<object class="NSMenuItem" id="531291596">
+								<object class="NSMenuItem" id="581558802">
 									<reference key="NSMenu" ref="720053764"/>
 									<string key="NSTitle">New from Clipboard</string>
 									<string key="NSKeyEquiv">n</string>
@@ -192,7 +192,7 @@
 								</object>
 								<object class="NSMenuItem" id="197882078">
 									<reference key="NSMenu" ref="720053764"/>
-									<string key="NSTitle">New Camera Image...</string>
+									<string key="NSTitle">New from Camera</string>
 									<string key="NSKeyEquiv">N</string>
 									<int key="NSKeyEquivModMask">1179648</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -470,6 +470,57 @@
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="1033313550"/>
 									<reference key="NSMixedImage" ref="310636482"/>
+								</object>
+								<object class="NSMenuItem" id="630164746">
+									<reference key="NSMenu" ref="466310130"/>
+									<bool key="NSIsDisabled">YES</bool>
+									<bool key="NSIsSeparator">YES</bool>
+									<string key="NSTitle"/>
+									<string key="NSKeyEquiv"/>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="1033313550"/>
+									<reference key="NSMixedImage" ref="310636482"/>
+								</object>
+								<object class="NSMenuItem" id="486082655">
+									<reference key="NSMenu" ref="466310130"/>
+									<string key="NSTitle">Background</string>
+									<string key="NSKeyEquiv"/>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="1033313550"/>
+									<reference key="NSMixedImage" ref="310636482"/>
+									<string key="NSAction">submenuAction:</string>
+									<object class="NSMenu" key="NSSubmenu" id="522447252">
+										<string key="NSTitle">Background</string>
+										<array class="NSMutableArray" key="NSMenuItems">
+											<object class="NSMenuItem" id="998678652">
+												<reference key="NSMenu" ref="522447252"/>
+												<string key="NSTitle">Checkerboard</string>
+												<string key="NSKeyEquiv">1</string>
+												<int key="NSKeyEquivModMask">1572864</int>
+												<int key="NSMnemonicLoc">2147483647</int>
+												<reference key="NSOnImage" ref="1033313550"/>
+												<reference key="NSMixedImage" ref="310636482"/>
+											</object>
+											<object class="NSMenuItem" id="674272321">
+												<reference key="NSMenu" ref="522447252"/>
+												<string key="NSTitle">Black</string>
+												<string key="NSKeyEquiv">2</string>
+												<int key="NSKeyEquivModMask">1572864</int>
+												<int key="NSMnemonicLoc">2147483647</int>
+												<reference key="NSOnImage" ref="1033313550"/>
+												<reference key="NSMixedImage" ref="310636482"/>
+											</object>
+											<object class="NSMenuItem" id="1064683652">
+												<reference key="NSMenu" ref="522447252"/>
+												<string key="NSTitle">White</string>
+												<string key="NSKeyEquiv">3</string>
+												<int key="NSKeyEquivModMask">1572864</int>
+												<int key="NSMnemonicLoc">2147483647</int>
+												<reference key="NSOnImage" ref="1033313550"/>
+												<reference key="NSMixedImage" ref="310636482"/>
+											</object>
+										</array>
+									</object>
 								</object>
 							</array>
 						</object>
@@ -784,9 +835,33 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">newFromClipboard:</string>
 						<reference key="source" ref="1014"/>
-						<reference key="destination" ref="531291596"/>
+						<reference key="destination" ref="581558802"/>
 					</object>
 					<int key="connectionID">546</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">setBackgroundCheckerboard</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="998678652"/>
+					</object>
+					<int key="connectionID">553</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">setBackgroundBlack</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="674272321"/>
+					</object>
+					<int key="connectionID">554</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">setBackgroundWhite</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="1064683652"/>
+					</object>
+					<int key="connectionID">555</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -875,7 +950,7 @@
 							<reference ref="1010469920"/>
 							<reference ref="425164168"/>
 							<reference ref="197882078"/>
-							<reference ref="531291596"/>
+							<reference ref="581558802"/>
 						</array>
 						<reference key="parent" ref="379814623"/>
 					</object>
@@ -1112,6 +1187,8 @@
 						<reference key="object" ref="466310130"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="754087196"/>
+							<reference ref="486082655"/>
+							<reference ref="630164746"/>
 						</array>
 						<reference key="parent" ref="586577488"/>
 					</object>
@@ -1205,8 +1282,46 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">545</int>
-						<reference key="object" ref="531291596"/>
+						<reference key="object" ref="581558802"/>
 						<reference key="parent" ref="720053764"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">547</int>
+						<reference key="object" ref="486082655"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="522447252"/>
+						</array>
+						<reference key="parent" ref="466310130"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">548</int>
+						<reference key="object" ref="522447252"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="998678652"/>
+							<reference ref="674272321"/>
+							<reference ref="1064683652"/>
+						</array>
+						<reference key="parent" ref="486082655"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">549</int>
+						<reference key="object" ref="998678652"/>
+						<reference key="parent" ref="522447252"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">550</int>
+						<reference key="object" ref="630164746"/>
+						<reference key="parent" ref="466310130"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">551</int>
+						<reference key="object" ref="674272321"/>
+						<reference key="parent" ref="522447252"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">552</int>
+						<reference key="object" ref="1064683652"/>
+						<reference key="parent" ref="522447252"/>
 					</object>
 				</array>
 			</object>
@@ -1263,6 +1378,12 @@
 				<string key="541.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="542.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="545.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="547.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="548.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="549.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="550.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="551.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="552.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1279,7 +1400,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">546</int>
+			<int key="maxID">555</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1299,6 +1420,222 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">IGAppDelegate</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="newCameraImage:">id</string>
+						<string key="newFromClipboard:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="newCameraImage:">
+							<string key="name">newCameraImage:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="newFromClipboard:">
+							<string key="name">newFromClipboard:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/IGAppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">IGDocument</string>
+					<string key="superclassName">NSDocument</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="addFilter:">id</string>
+						<string key="applyFilters:">id</string>
+						<string key="changedFilterParamValue2:">id</string>
+						<string key="changedFilterParamValue3:">id</string>
+						<string key="changedFilterParamValue:">id</string>
+						<string key="changedFilterParamValueByText2:">id</string>
+						<string key="changedFilterParamValueByText3:">id</string>
+						<string key="changedFilterParamValueByText:">id</string>
+						<string key="chnagedFilterParamValue4:">id</string>
+						<string key="chnagedFilterParamValueByText4:">id</string>
+						<string key="copy:">id</string>
+						<string key="saveAs:">id</string>
+						<string key="setBackgroundBlack:">id</string>
+						<string key="setBackgroundCheckerboard:">id</string>
+						<string key="setBackgroundWhite:">id</string>
+						<string key="showImageFilters:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="addFilter:">
+							<string key="name">addFilter:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="applyFilters:">
+							<string key="name">applyFilters:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValue2:">
+							<string key="name">changedFilterParamValue2:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValue3:">
+							<string key="name">changedFilterParamValue3:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValue:">
+							<string key="name">changedFilterParamValue:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValueByText2:">
+							<string key="name">changedFilterParamValueByText2:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValueByText3:">
+							<string key="name">changedFilterParamValueByText3:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="changedFilterParamValueByText:">
+							<string key="name">changedFilterParamValueByText:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="chnagedFilterParamValue4:">
+							<string key="name">chnagedFilterParamValue4:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="chnagedFilterParamValueByText4:">
+							<string key="name">chnagedFilterParamValueByText4:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="copy:">
+							<string key="name">copy:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="saveAs:">
+							<string key="name">saveAs:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="setBackgroundBlack:">
+							<string key="name">setBackgroundBlack:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="setBackgroundCheckerboard:">
+							<string key="name">setBackgroundCheckerboard:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="setBackgroundWhite:">
+							<string key="name">setBackgroundWhite:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="showImageFilters:">
+							<string key="name">showImageFilters:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="filterParamField">NSTextField</string>
+						<string key="filterParamField2">NSTextField</string>
+						<string key="filterParamField3">NSTextField</string>
+						<string key="filterParamField4">NSTextField</string>
+						<string key="filterParamSlider">NSSlider</string>
+						<string key="filterParamSlider2">NSSlider</string>
+						<string key="filterParamSlider3">NSSlider</string>
+						<string key="filterParamSlider4">NSSlider</string>
+						<string key="filterParamValueField">NSTextField</string>
+						<string key="filterParamValueField2">NSTextField</string>
+						<string key="filterParamValueField3">NSTextField</string>
+						<string key="filterParamValueField4">NSTextField</string>
+						<string key="filterTypeButton">NSPopUpButton</string>
+						<string key="filtersPanel">NSPanel</string>
+						<string key="filtersTableView">NSTableView</string>
+						<string key="mainView">IGView</string>
+						<string key="scrollView">NSScrollView</string>
+						<string key="showFiltersButton">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="filterParamField">
+							<string key="name">filterParamField</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamField2">
+							<string key="name">filterParamField2</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamField3">
+							<string key="name">filterParamField3</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamField4">
+							<string key="name">filterParamField4</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamSlider">
+							<string key="name">filterParamSlider</string>
+							<string key="candidateClassName">NSSlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamSlider2">
+							<string key="name">filterParamSlider2</string>
+							<string key="candidateClassName">NSSlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamSlider3">
+							<string key="name">filterParamSlider3</string>
+							<string key="candidateClassName">NSSlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamSlider4">
+							<string key="name">filterParamSlider4</string>
+							<string key="candidateClassName">NSSlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamValueField">
+							<string key="name">filterParamValueField</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamValueField2">
+							<string key="name">filterParamValueField2</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamValueField3">
+							<string key="name">filterParamValueField3</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterParamValueField4">
+							<string key="name">filterParamValueField4</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filterTypeButton">
+							<string key="name">filterTypeButton</string>
+							<string key="candidateClassName">NSPopUpButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filtersPanel">
+							<string key="name">filtersPanel</string>
+							<string key="candidateClassName">NSPanel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="filtersTableView">
+							<string key="name">filtersTableView</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mainView">
+							<string key="name">mainView</string>
+							<string key="candidateClassName">IGView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">NSScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="showFiltersButton">
+							<string key="name">showFiltersButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/IGDocument.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">IGView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/IGView.h</string>
 					</object>
 				</object>
 			</array>
